--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             </div>
             </div>
             <!--header image-->
-            <!-- <div class="header-image">
+            <div class="header-image">
             <img src="images/man.jpg" alt="logo">
-            </div> -->
+            </div>
             <!--header image end-->
         </div>
            <!--Header End-->
